services-behind-nginx-ingress-controller-certmanager/30-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: https-ingress
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
  - host: test1.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld-v1
          servicePort: 80

  tls:
  - secretName: test1.example.com-tls
    hosts:
    - test1.example.com
  - secretName: test2.example.com-tls
    hosts:
    - test2.example.com
